add jobsearch.html, contact.html, file structure for Assets folder

--- a/index.html
+++ b/index.html
@@ -3,16 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./Assets/css/style.css" />
+    <title>Coding Job Search Home</title>
 </head>
 <body>
-    <button class="ui primary button">
-        Save
-      </button>
-      <button class="ui button">
-        Discard
-      </button>
+<!-- HTML to create Nav Bar -->
+  <div class="ui stackable menu">
+    <div class="header item"> Software Developers Job Search</div>
+    <div class="right menu">
+      <a class="active item">
+        <i class="home icon"></i> Home
+      </a>
+      <a class="item">
+        <i class="search icon"></i> Job Search
+      </a>
+      <a class="item">
+        <i class="mail icon"></i> Contact Us
+      </a>
+    </div>
+  </div>
+<!-- End Nav Bar HTML -->
+
+  <div class="ui segment">
+    <img class="ui centered massive rounded image" src="./Assets/images/homepage_image.jpg">
+    <div class="ui text container">Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow.</div>
+    
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.css">
