--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/css/style.css" />
-    <title>Coding Job Search Home</title>
+    <title>Contact Us</title>
 </head>
 <body>
 <!-- HTML to create Nav Bar -->
   <div class="ui stackable menu">
     <div class="header item"> Software Developers Job Search</div>
     <div class="right menu">
-      <a class="active item">
+      <a class="item" href="./index.html">
         <i class="home icon"></i> Home
       </a>
-      <a class="item">
+      <a class="item" href="./jobsearch.html">
         <i class="search icon"></i> Job Search
       </a>
-      <a class="item">
+      <a class="active item" href="./contact.html">
         <i class="mail icon"></i> Contact Us
       </a>
     </div>
@@ -25,10 +25,10 @@
 <!-- End Nav Bar HTML -->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.js"></script>
-
-  <script src="./script.js"></script>
+<!-- Links for Fomantic library, Jquery, internal JS -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.css">
+<script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
