--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 <!-- HTML to create Nav Bar -->
-  <div class="ui stackable menu">
-    <div class="header item"> Software Developers Job Search</div>
+  <div class="ui fixed inverted stackable menu">
+    <div class="ui header borderless item"> 
+      <i class="computer icon"></i>Software Developers Job Search
+    </div>
     <div class="right menu">
       <a class="active item" href="./index.html">
         <i class="home icon"></i> Home
@@ -24,12 +26,13 @@
   </div>
 <!-- End Nav Bar HTML -->
 
-<!-- HTML to create large image and text box with aplication description -->
-  <div class="ui segment">
-    <img class="ui centered massive rounded image" src="./Assets/images/homepage_image.jpg">
-    <div class="ui text container">
-      Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow.
-    </div>    
+<!-- HTML to create large image and text box with application description -->
+  <div class="ui main text container">
+    <img class="ui centered massive rounded image" src="./Assets/images/homepage_image.jpg" alt="©creativecommonsstockphotos - Dreamstime.com">
+    <h3 class="ui header">About This Application</h3>
+    <p>
+      THIS IS FILLER TEXT MUST REPLACE. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. THIS IS FILLER TEXT MUST REPLACE.
+    </p>    
   </div>
 <!-- End image and description text HTML -->
 
