--- a/jobsearch.html
+++ b/jobsearch.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 <!-- HTML to create Nav Bar -->
-  <div class="ui stackable menu">
-    <div class="header item"> Software Developers Job Search</div>
+  <div class="ui fixed inverted stackable menu">
+    <div class="ui header borderless item"> 
+      <i class="computer icon"></i>Software Developers Job Search
+    </div>
     <div class="right menu">
       <a class="item" href="./index.html">
         <i class="home icon"></i> Home
@@ -24,6 +26,20 @@
   </div>
 <!-- End Nav Bar HTML -->
 
+<!-- HTML to create job serach content -->
+  <div class="ui main container">
+    <div class="ui two column celled grid">
+      <!-- HTML to create the search parameter funtionality -->
+      <div class="four wide column">
+        <h3>Search Parameters Go Here</h3>
+      </div>
+      <!-- HTML to create a space for the search results to be displayed -->
+      <div class="twelve wide column">
+        <h3>Search Results Are Displayed Here</h3>
+      </div>
+    </div>
+  </div>
+<!-- End job search content HTML -->
 
 <!-- Links for Fomantic library, Jquery, internal JS -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
