--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
       <div class="fields">
         <div class="field">
           <label>Company Name</label>
-          <input type="text" placeholder="Comany Name">
+          <input type="text" placeholder="Company Name">
         </div>
         <div class="field">
           <label>Phone Number</label>
