--- a/jobsearch.html
+++ b/jobsearch.html
@@ -43,67 +43,72 @@
             <label>ZIP Code</label>
             <input type="text" name="zipcode" placeholder="12345">
           </div>
-          <!-- employment check boxes -->
-          <div class="grouped fields">
-            <label>Employment Type</label>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="employment">
-                <label>Full Time</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="employment">
-                <label>Part Time</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="employment">
-                <label>Freelance</label>
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="employment" checked="checked">
-                <label>Any Type</label>
-              </div>
-            </div>
+          <!-- fulltime employment slider -->
+          <div class="ui toggle checkbox">
+            <input type="checkbox" name="public">
+            <label>Full Time Employement</label>
           </div>
-          <div class="grouped fields">
+          
+          <!-- commute distance check boxes (depricated) -->
+          <!-- <div class="grouped fields">
             <label>Commute Distance</label>
             <div class="field">
-              <div class="ui slider checkbox">
+              <div class="ui radio checkbox">
                 <input type="radio" name="commute" checked="checked">
                 <label>Work from Home</label>
               </div>
             </div>
             <div class="field">
-              <div class="ui slider checkbox">
+              <div class="ui radio checkbox">
                 <input type="radio" name="commute">
                 <label>10 miles or less</label>
               </div>
             </div>
             <div class="field">
-              <div class="ui slider checkbox">
+              <div class="ui radio checkbox">
                 <input type="radio" name="commute">
                 <label>20 miles or less</label>
               </div>
             </div>
             <div class="field">
-              <div class="ui slider checkbox checked">
+              <div class="ui radio checkbox checked">
                 <input type="radio" name="commute">
                 <label>Any Distance</label>
               </div>
             </div>
-          </div>
+          </div> -->
           <button class="ui button" type="submit" id="submitBtn">Submit</button>
         </form>
       </div>
       <!-- HTML to create a space for the search results to be displayed -->
       <div class="twelve wide column">
         <h3>Search Results Are Displayed Here</h3>
+        <!-- code to test accordion -->
+        <div class="ui styled fluid accordion">
+          <div class="title">
+            <i class="dropdown icon"></i>
+            What is a dog?
+          </div>
+          <div class="content">
+            <p class="transition hidden">A dog is a type of domesticated animal. Known for its loyalty and faithfulness, it can be found as a welcome guest in many households across the world.</p>
+          </div>
+          <div class="title">
+            <i class="dropdown icon"></i>
+            What kinds of dogs are there?
+          </div>
+          <div class="content">
+            <p class="transition hidden">There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.</p>
+          </div>
+          <div class="title active">
+            <i class="dropdown icon"></i>
+            How do you acquire a dog?
+          </div>
+          <div class="content active">
+            <p style="display: block !important;" class="visible">Three common ways for a prospective owner to acquire a dog is from pet shops, private owners, or shelters.</p>
+            <p style="display: block !important;" class="visible">A pet shop may be the most convenient way to buy a dog. Buying a dog from a private owner allows you to assess the pedigree and upbringing of your dog before choosing to take it home. Lastly, finding your dog from a shelter, helps give a good home to a dog who may not find one so readily.</p>
+          </div>
+        </div>
+        <!-- end accordion test -->
         <div id="results"></div>
       </div>
     </div>
