--- a/jobsearch.html
+++ b/jobsearch.html
@@ -115,10 +115,14 @@
   </div>
 <!-- End job search content HTML -->
 
+<!-- Include lodash -->
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+
 <!-- Links for Fomantic library, Jquery, internal JS -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.css">
 <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.js"></script>
+
 <script src="./script.js"></script>
 </body>
 </html>
