fix accordion functionality, delete test code in jobsearch.html

--- a/jobsearch.html
+++ b/jobsearch.html
@@ -28,7 +28,7 @@
 
 <!-- HTML to create job serach content -->
   <div class="ui main container">
-    < class="ui two column celled grid">
+    <div class="ui two column celled grid">
       <!-- HTML to create the search parameter funtionality -->
       <div class="four wide column">
         <h3>Search Parameters</h3>
