added zip api search and html description

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <img class="ui centered massive rounded image" src="./Assets/images/homepage_image.jpg" alt="©creativecommonsstockphotos - Dreamstime.com">
     <h3 class="ui header">About This Application</h3>
     <p>
-      THIS IS FILLER TEXT MUST REPLACE. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. Sphinx of black quartz, judge my vow. THIS IS FILLER TEXT MUST REPLACE.
+      Our application allows Software Developers to search for jobs specifically related to their field. If a Developer wanted  jobs specific to Javascript or Python, they would enter keywords in the search bar, hit search and job listings will appear. 
+      The results are displayed with the most current job listings as well as any featured news about the company.
+
     </p>    
   </div>
 <!-- End image and description text HTML -->
