added additional zip info

--- a/jobsearch.html
+++ b/jobsearch.html
@@ -41,7 +41,7 @@
           <!-- zipcode entry field -->
           <div class="field">
             <label>ZIP Code</label>
-            <input type="text" name="zipcode" placeholder="12345">
+            <input type="text" name="zipcode" placeholder="12345" id="zipCode">
           </div>
           <!-- fulltime employment slider -->
           <div class="ui toggle checkbox">
