--- a/jobsearch.html
+++ b/jobsearch.html
@@ -68,6 +68,6 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.css">
 <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.5/dist/semantic.min.js"></script>
 
-<script src="./script.js"></script>
+<script src="./script2.js"></script>
 </body>
 </html>
